Update Readme, add Maven wrapper